Enviando ao repositorio

--- a/DS_aula1.ipynb
+++ b/DS_aula1.ipynb
@@ -9942,7 +9942,7 @@
     "\n",
     "df2['assortment'] = df2['assortment'].apply(lambda x: 'basic' if x == 'a' else 'extra' if x == 'b' else 'extended')\n",
     "\n",
-    "# - state holiday\n",
+    "# - State holiday\n",
     "\n",
     "df2['state_holiday'] = df2['state_holiday'].apply(lambda x: 'public_holiday' if x == 'a' else 'Easter_holiday' if x == 'b' else 'Christmas' if x == 'c' else 'regular_day')\n"
    ]
