--- a/DS_aula1.ipynb
+++ b/DS_aula1.ipynb
@@ -9907,7 +9907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9951,7 +9951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -10065,11 +10065,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>assortment</th>\n",
-       "      <td>basic</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>basic</td>\n",
        "      <td>extended</td>\n",
-       "      <td>basic</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>extended</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>competition_distance</th>\n",
@@ -10223,7 +10223,7 @@
        "state_holiday                         regular_day          regular_day   \n",
        "school_holiday                                  1                    1   \n",
        "store_type                                      c                    a   \n",
-       "assortment                                  basic                basic   \n",
+       "assortment                               extended             extended   \n",
        "competition_distance                       1270.0                570.0   \n",
        "competition_open_since_month                    9                   11   \n",
        "competition_open_since_year                  2008                 2007   \n",
@@ -10253,7 +10253,7 @@
        "state_holiday                         regular_day          regular_day   \n",
        "school_holiday                                  1                    1   \n",
        "store_type                                      a                    c   \n",
-       "assortment                                  basic             extended   \n",
+       "assortment                               extended             extended   \n",
        "competition_distance                      14130.0                620.0   \n",
        "competition_open_since_month                   12                    9   \n",
        "competition_open_since_year                  2006                 2009   \n",
@@ -10283,7 +10283,7 @@
        "state_holiday                         regular_day  \n",
        "school_holiday                                  1  \n",
        "store_type                                      a  \n",
-       "assortment                                  basic  \n",
+       "assortment                               extended  \n",
        "competition_distance                      29910.0  \n",
        "competition_open_since_month                    4  \n",
        "competition_open_since_year                  2015  \n",
@@ -10303,7 +10303,7 @@
        "promo_time_week                                 0  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
