Conclusão das analises Bivariadas

--- a/DS_aula1.ipynb
+++ b/DS_aula1.ipynb
@@ -13379,18 +13379,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f          i           r\n",
+      "---------  ----------  ----------\n",
+      "Hipoteses  Conclusao   Relevancia\n",
+      "H1         Falsa       Baixa\n",
+      "H2         Falsa       Media\n",
+      "H3         Falsa       Media\n",
+      "H4         Falsa       Baixa\n",
+      "H5         -           -\n",
+      "H7         Falsa       Baixa\n",
+      "H8         Falsa       Media\n",
+      "H9         Falsa       Alta\n",
+      "H10        Falsa       Alta\n",
+      "H11        Verdadeira  Alta\n",
+      "H12        Verdadeira  Alta\n",
+      "H13        Verdadeira  Baixa\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "tab = [['Hipoteses', 'Conclusao', 'Relevancia' ],\n",
+    "       ['H1', 'Falsa', 'Baixa'],\n",
+    "       ['H2', 'Falsa', 'Media'],\n",
+    "       ['H3', 'Falsa', 'Media'],\n",
+    "       ['H4', 'Falsa', 'Baixa'],\n",
+    "       ['H5', '-', '-'],\n",
+    "       ['H7', 'Falsa', 'Baixa'],\n",
+    "       ['H8', 'Falsa', 'Media'],\n",
+    "       ['H9', 'Falsa', 'Alta'],\n",
+    "       ['H10', 'Falsa', 'Alta'],\n",
+    "       ['H11', 'Verdadeira', 'Alta'],\n",
+    "       ['H12', 'Verdadeira', 'Alta'],\n",
+    "       ['H13', 'Verdadeira', 'Baixa'],\n",
+    "       ]\n",
+    "print(tabulate(tab, headers='firsthow'))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 4.3 Analise Multivariada"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
