Implementado novas machine learning

--- a/DS_aula1.ipynb
+++ b/DS_aula1.ipynb
@@ -14434,7 +14434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14451,7 +14451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14474,7 +14474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -14521,7 +14521,7 @@
        "0  Average Model  1354.800353  0.455051  1835.135542"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14552,7 +14552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -14599,7 +14599,7 @@
        "0  Linear Regression  1867.271764  0.292644  2671.58153"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14625,7 +14625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -14659,27 +14659,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Linear Regression - Lasso</td>\n",
-       "      <td>1869.567314</td>\n",
-       "      <td>0.28811</td>\n",
-       "      <td>2694.001791</td>\n",
+       "      <td>1891.704881</td>\n",
+       "      <td>0.289106</td>\n",
+       "      <td>2744.451737</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Model Name          MAE     MAPE         RMSE\n",
-       "0  Linear Regression - Lasso  1869.567314  0.28811  2694.001791"
+       "                  Model Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression - Lasso  1891.704881  0.289106  2744.451737"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# model - Lembre se quanto mais aumento as casas decimais de alpha=0.001 maior vai ser o RMSE\n",
-    "lrr = Lasso(alpha=0.001).fit(x_train, y_train)\n",
+    "lrr = Lasso(alpha=0.01).fit(x_train, y_train)\n",
     "\n",
     "# prediction\n",
     "yhat_lrr = lrr.predict(x_test)\n",
@@ -14687,6 +14687,271 @@
     "# performance\n",
     "lrr_result = ml_error( 'Linear Regression - Lasso', np.expm1(y_test), np.expm1(yhat_lrr))\n",
     "lrr_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.4 Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Random Forrest Regressor</td>\n",
+       "      <td>666.790825</td>\n",
+       "      <td>0.097502</td>\n",
+       "      <td>994.244329</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Model Name         MAE      MAPE        RMSE\n",
+       "0  Random Forrest Regressor  666.790825  0.097502  994.244329"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor (n_estimators=100, n_jobs=-1, random_state=42).fit(x_train, y_train)\n",
+    "\n",
+    "# prediction\n",
+    "yhat_rf = rf.predict(x_test)\n",
+    "\n",
+    "# performance\n",
+    "rf_result = ml_error( 'Random Forrest Regressor', np.expm1(y_test), np.expm1(yhat_rf))\n",
+    "rf_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.5 XGBoost Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost Regressor</td>\n",
+       "      <td>1030.950365</td>\n",
+       "      <td>0.14932</td>\n",
+       "      <td>1521.336977</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model Name          MAE     MAPE         RMSE\n",
+       "0  XGBoost Regressor  1030.950365  0.14932  1521.336977"
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_xgb = xgb.XGBRegressor( objective='reg:squarederror',\n",
+    "                              n_estimators=600,\n",
+    "                              eta=0.01,\n",
+    "                              max_depth=10,\n",
+    "                              subsample=0.7,\n",
+    "                              colsample_bytree=0.9).fit(x_train, y_train)\n",
+    "\n",
+    "# prediction\n",
+    "yhat_xgb = model_xgb.predict(x_test)\n",
+    "\n",
+    "# performance\n",
+    "xgb_result = ml_error( 'XGBoost Regressor', np.expm1(y_test), np.expm1(yhat_xgb))\n",
+    "xgb_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.6 Compare Models Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Random Forrest Regressor</td>\n",
+       "      <td>666.790825</td>\n",
+       "      <td>0.097502</td>\n",
+       "      <td>994.244329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost Regressor</td>\n",
+       "      <td>1030.950365</td>\n",
+       "      <td>0.149320</td>\n",
+       "      <td>1521.336977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1867.271764</td>\n",
+       "      <td>0.292644</td>\n",
+       "      <td>2671.581530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1891.704881</td>\n",
+       "      <td>0.289106</td>\n",
+       "      <td>2744.451737</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model Name          MAE      MAPE         RMSE\n",
+       "0   Random Forrest Regressor   666.790825  0.097502   994.244329\n",
+       "0          XGBoost Regressor  1030.950365  0.149320  1521.336977\n",
+       "0              Average Model  1354.800353  0.455051  1835.135542\n",
+       "0          Linear Regression  1867.271764  0.292644  2671.581530\n",
+       "0  Linear Regression - Lasso  1891.704881  0.289106  2744.451737"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelling_result = pd.concat([baseline_result, lr_result, lrr_result, rf_result, xgb_result])\n",
+    "modelling_result.sort_values('RMSE')"
    ]
   }
  ],
